# i-emic

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
doc/: Doxyfile
mrilu/: CMakeLists.txt  Makefile  README  makefile.inc
mrilu/convprogs/: Makefile  amt2bmt.F90  avc2bvc.F90  avczn2avc.F90  bmt2amt.F90  bvc2avc.F90  hbf2amt.F90  stc2acsr.F90  stc2bcsr.F90  vsm2bmt.F90  vsmb2bmt.F90
mrilu/getdoc/: Makefile  README  gendefs.c  gendefs.h  getdoc.c  getdoc.txt  showdoc  showdoc_template.sh
mrilu/iosrclib/: Makefile  fstrlen.F90  getunit.F90  guerrmsg.F90  ioerrmsg.F90  rdfilenm.F90  rdhbf.F90  rdmt.F90  rdstc.F90  rdvc.F90  rdvec.F90  rdvsm.F90  rdvsmb.F90  wrdstc.F90  wrdvec.F90  wrtafmt.F90  wrtbbd.F90  wrtbldu.F90  wrtbmtde.F90  wrtmt.F90  wrtmtd.F90  wrtvec.F90  wrtvsm.F90  xfnminr.F90
mrilu/makefile_inc_examples/: makefile_cartesius  makefile_inc_i686_g95  makefile_inc_i686_gfortran  makefile_inc_ia64_ifort  makefile_inc_ppc_64_xlf95  makefile_inc_travis  makefile_inc_x86_64_g95  makefile_inc_x86_64_gfortran  makefile_inc_x86_64_ifort  makefile_ubuntu
mrilu/misc/: Makefile  README  csr2cscvv.F90  dgeco.F90  dgedi.F90  dgefa.F90  dgesl.F90  dgetf2.F90  dgetrf.F90  dgetrs.F90  dlaswp.F90  dperv.F90  dswap.F90  dtrsm.F90  iperv.F90
mrilu/mtlb/: Contents  csr2sp.m  genmat.m  pltwsb.m  rdacsr.m  rdacsr2sp.m  rdavec.m  rdbcsr.m  rdbvec.m  sldu.m  sp2csr.m  sp2csrwrta.m  vsm.m  vsmcsr.m  wrtacsr.m  wrtavec.m  wrtbcsr.m  wrtbvec.m
mrilu/mtstor/: Makefile  README  build.F90  chkcnt.F90  config.mk  cscresize.F90  cscvec.F90  csr2csc.F90  csrresize.F90  csrvec.F90  dump.F90  mterrmsg.F90  wacsc.F90  wacsr.F90  wacsrd.F90  wadia.F90  wafm.F90  wamlp.F90  wapffp.F90  wapldu.F90  wappnd.F90  waprc.F90  wapsfp.F90  wascbm.F90  wascde.F90  wcompr.F90  wennz.F90  wfree.F90
mrilu/precon/: EUGEN.inp  Makefile  applmlp.F90  applprc.F90  bepnum.F90  bepnum.F90.org  bicgstab.F90  bicgstabr.F90  cg.F90  chmat.F90  cmpprc.F90  cmpsccsrd  cmpscscbm  cmpsol.F90  copymt.F90  crbper.F90  csflpar.F90  csslpar.F90  defvals.F90  diavec.F90  eblkdia.F90  eugen  eugen.res  filgrd.F90  glbpars.F90  gmres.F90  hernumsch.F90  ilduk.F90  incldup.F90  iniglb.F90  iniprc.F90  inisol.F90  inivis.F90  invbdia.F90  invblkcutmck.F90  lumpdrop.F90.Erik1  lumpdrop.F90.Erik2  lumpdrop.F90.Stokes  lumpdrop.F90.diag  lumpdrop.F90.oceErik  (+35 more)
mrilu/scripts/: configure  rules.mk
mrilu/testMRILU/: Makefile  arthura.F90  cmpsolprc.F90  cmpsolprc2.F90  eugen2d.F90  nonsym.F90  nschmat.F90  readsherman.F90  smallnonsym.F90  testall  testnonsym  testnschmat
mrilu/vsm/: LXlib.c  Makefile  README  globals.h  inttypes.h  smatrix.c  vissmat.c  vsm.c
src/: CMakeLists.txt  Makefile
src/ams/: AMS.H  CMakeLists.txt  Epetra_MatrixOrMultiVector.h  ProjectedThetaModel.H  ScoreFunctions.C  StochasticBase.H  StochasticProjectedThetaModel.H  StochasticThetaModel.H  ThetaModel.H  TimeStepper.cpp  TimeStepper.hpp  TimeStepperDecl.hpp  Transient.cpp  Transient.hpp  TransientDecl.hpp  TransientFactory.H
src/atmosphere/: AtmosLocal.C  AtmosLocal.H  Atmosphere.C  Atmosphere.H  AtmosphereDefinitions.H  AtmospherePar.C  AtmospherePar.H  CMakeLists.txt  Makefile
src/continuation/: CMakeLists.txt  Continuation.H  ContinuationDecl.H
src/coupledmodel/: CMakeLists.txt  CoupledModel.C  CoupledModel.H  CouplingBlock.C  CouplingBlock.H
src/dependencygrid/: CMakeLists.txt  DependencyGrid.C  DependencyGrid.H  MultiArray.H
src/globaldefs/: CMakeLists.txt  GlobalDefinitions.H
src/gmressolver/: GMRESMacros.H  GMRESSolver.H  GMRESSolverDecl.H
src/idrsolver/: IDRSolver.H  IDRSolverDecl.H
src/lyapunov/: LyapunovModel.H
src/main/: CMakeLists.txt  Makefile  RunDefinitions.H  main.C  ocean_test.xml  run_ams.C  run_coupled.C  run_lyapunov.C  run_ocean.C  run_topo.C  test_numjac.C  time_coupled.C  time_ocean.C
src/make.inc/: Makefile.all  Makefile.desktop  Makefile.grunn  Makefile.imac  Makefile.tmp  Makefile.vliegtuig
src/mrilucpp/: CMakeLists.txt  Ifpack_MRILU.cpp  Ifpack_MRILU.h  Makefile  mrilucpp.F90
src/multiarray/: MultiArray.H
src/newton/: Newton.C  Newton.H  NewtonDecl.H
src/ocean/: CMakeLists.txt  Makefile  Ocean.C  Ocean.H  OceanGrid.C  OceanGrid.H  OceanTheta.C  OceanTheta.H  Singleton.H  THCM.C  THCM.H  TRIOS_BlockPreconditioner.C  TRIOS_BlockPreconditioner.H  TRIOS_Domain.C  TRIOS_Domain.H  TRIOS_Saddlepoint.C  TRIOS_Saddlepoint.H  TRIOS_SolverFactory.C  TRIOS_SolverFactory.H  TekoPreconditioner.H  Utils.C  assemble.F90  atm.F90  boundary.F90  dumparray.F90  fdefs.h  forcing.F90  global.F90  grid.F90  ice.F90  inout.F90  inserts.F90  integrals.F90  lev.F90  levitus.F90  mat.F90  matetc.F90  mix.F90  mix_imp.f  monthly.F90  (+11 more)
src/seaice/: CMakeLists.txt  SeaIce.C  SeaIce.H  SeaIceDefinitions.H
src/supervector/: CMakeLists.txt  Makefile  SuperVector.C  SuperVector.H
src/tests/: CMakeLists.txt  TestDefinitions.C  TestDefinitions.H  int_coupled.C  intt_2dmoc.C  intt_coupled.C  intt_ocean.C  reft_ocean.C  test.C  test_ams.C  test_atmos.C  test_coupled.C  test_domain.C  test_integrals.C  test_jdqz.C  test_map.C  test_matrix.C  test_ocean.C  test_oceanatmos.C  test_parameterlist.C  test_parameterlist_ocean.C  test_parameterlist_oceandefault.C  test_parameterlist_thcm.C  test_parameterlist_thcmdefault.C  test_seaice.C  test_supervec.C  test_topo.C  test_utils.C  test_vector.C  trns_ocean.C
src/thcm/: AbstractTimeStepper.H  BlockCirculantSolver.C  BlockCirculantSolver.H  DefaultParams.C  DefaultParams.H  Filestreams.C  GlobalDefinitions.H  HYMLS_Macros.H  HYMLS_MatrixUtils.C  HYMLS_MatrixUtils.H  HYMLS_Tools.C  HYMLS_Tools.H  ImplicitTimeStepper.C  ImplicitTimeStepper.H  Makefile  Ocean.H  OceanContinuation.C  OceanGrid.C  OceanGrid.H  OceanModel.C  OceanModel.H  OceanOutputXdmf.C  OceanOutputXdmf.H  OceanPeriodic.C  OceanTimeStepping.C  Rearranger.C  Rearranger.H  Singleton.H  THCM.C  THCM.H  THCMdefs.H  TRIOS_BlockPreconditioner.C  TRIOS_BlockPreconditioner.H  TRIOS_Domain.C  TRIOS_Macros.H  TRIOS_Saddlepoint.C  TRIOS_SolverFactory.C  TRIOS_SolverFactory.H  TRIOS_Static.C  TRIOS_Static.H  (+23 more)
(+721 files in other folders)
